--- a/frontend/pages/cart.html
+++ b/frontend/pages/cart.html
@@ -2,8 +2,8 @@
     <div id="cart-items" class="cart-items-container"></div>
     <div id="cart-empty-placeholder" class="cart-empty-placeholder">
         <div id="cart-empty-placeholder-icon"></div>
-        <h3>Your cart is empty</h3>
-        <p>It's time to order something delicious!</p>
+        <h3>Ваша карзина пуста</h3>
+        <p>Время заказать что нибудь вкусненькое!</p>
     </div>
 
     <template id="cart-item-template">
@@ -11,13 +11,13 @@
             <img id="cart-item-image" class="cart-item-image"/>
             <div class="cart-item-info-container">
                 <h6 id="cart-item-name" class="cart-item-name"></h6>
-                <p id="cart-item-description" class="small cart-item-description">Small</p>
-                <div id="cart-item-cost" class="cart-item-cost">$2.00</div>
+                <p id="cart-item-description" class="small cart-item-description">Маленький</p>
+                <div id="cart-item-cost" class="cart-item-cost">₽150.00</div>
             </div>
             <div class="cart-item-quantity-container">
-                <button id="cart-item-quantity-decrement" class="material-symbols-rounded icon-button small">remove</button>
+                <button id="cart-item-quantity-decrement" class="material-symbols-rounded icon-button small">убрать</button>
                 <div id="cart-item-quantity" class="cart-item-quantity">1</div>
-                <button id="cart-item-quantity-increment" class="material-symbols-rounded icon-button small">add</button>
+                <button id="cart-item-quantity-increment" class="material-symbols-rounded icon-button small">добавить</button>
             </div>
         </div>
     </template>
