--- a/frontend/pages/details.html
+++ b/frontend/pages/details.html
@@ -4,10 +4,10 @@
             <img id="cafe-item-details-image" class="cover shimmer" src="icons/icon-transparent.svg"/>
             <div class="cafe-item-details-title-container">
                 <h1 id="cafe-item-details-name" class="cafe-item-details-name shimmer"></h1>
-                <p id="cafe-item-details-selected-variant-weight" class="cafe-item-details-selected-variant-weight shimmer">500g</p>
+                <p id="cafe-item-details-selected-variant-weight" class="cafe-item-details-selected-variant-weight shimmer">500г</p>
             </div>
             <p id="cafe-item-details-description" class="cafe-item-details-description shimmer"></p>
-            <h3 id="cafe-item-details-section-title" class="cafe-item-details-section-title shimmer">Price</h3>
+            <h3 id="cafe-item-details-section-title" class="cafe-item-details-section-title shimmer">Цена</h3>
             <div class="cafe-item-details-section-price">
                 <div id="cafe-item-details-variants" class="cafe-item-details-variants"></div>
                 <h2 id="cafe-item-details-selected-variant-price" class="cafe-item-details-selected-variant-price shimmer"></h2>
@@ -15,9 +15,9 @@
         </div>
 
         <div class="cafe-item-details-quantity-selector-container">
-            <button id="cafe-item-details-quantity-decrease-button" class="material-symbols-rounded icon-button">remove</button>
+            <button id="cafe-item-details-quantity-decrease-button" class="material-symbols-rounded icon-button">убрать</button>
             <h2 id="cafe-item-details-quantity-value" class="cafe-item-details-quantity-selector-value">1</h2>
-            <button id="cafe-item-details-quantity-increase-button" class="material-symbols-rounded icon-button">add</button>
+            <button id="cafe-item-details-quantity-increase-button" class="material-symbols-rounded icon-button">добавить</button>
         </div>
     </div>
 
