--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="MobileOptimized" content="176">
     <meta name="HandheldFriendly" content="True">
     <meta name="robots" content="noindex, nofollow">
-    <title>Laurel Cafe</title>
+    <title>Виноград</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
